statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wetty
spec:
  serviceName: wetty
  replicas: 3
  updateStrategy:
    type: RollingUpdate 
  selector:
    matchLabels:
      app: wetty
  template:
    metadata:
      labels:
        app: wetty
    spec:
      containers:
        - name: wetty
          image: CONTAINER_IMAGE
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1000m"
              memory: "2Gi"
          ports:
            - containerPort: 3000
              name: wetty
            - containerPort: 22
              name: ssh              
---
apiVersion: v1
kind: Service
metadata:
  name: wetty
  labels:
    name: wetty
spec:
  selector:
    app: wetty
  ports:
  - port: 3000
    name: wetty
