wetty-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wetty-ingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: 200-499
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_days=1
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:886993334988:certificate/52183672-ec04-49c1-bd79-ccfb06d17bd0
    alb.ingress.kubernetes.io/tags: Name=wetty-ingress
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn":"arn:aws:cognito-idp:us-east-1:886993334988:userpool/us-east-1_bncFiQll4", "UserPoolClientId":"45btfn82h927np18uvonanp2j8", "UserPoolDomain":"users-hmb.auth.us-east-1.amazoncognito.com"}'
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-scope: 'email profile openid'
    alb.ingress.kubernetes.io/auth-session-timeout: '3600'
spec:
  backend:
    serviceName: wetty
    servicePort: 3000
